fix(article): Small fixes and cleanup
- Improve aria-label in `ThemedImage`
- Add missing break in `ArticleEditPage.onError`
- Remove extra space in `getArticleForEdit` query key
- Remove duplicated in `markdown-it.css`

--- a/styles/markdown-it.css
+++ b/styles/markdown-it.css
@@ -155,18 +155,6 @@
         .hljs-strong {
           font-weight: 700;
         }
-        table {
-          @apply border-collapse border;
-
-          th,
-          td {
-            @apply border px-2 py-1;
-          }
-
-          th {
-            @apply font-bold;
-          }
-        }
 
         .hljs-emphasis {
           font-style: italic;
